<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/button1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddApartmentPost">

    <EditText
        android:id="@+id/txtTypesofhouse"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_inserthere"
        app:layout_constraintEnd_toEndOf="@+id/txtAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtAddress"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

    <EditText
        android:id="@+id/txtBedroom"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_inserthere"
        app:layout_constraintEnd_toEndOf="@+id/txtTypesofhouse"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtTypesofhouse"
        app:layout_constraintTop_toBottomOf="@+id/txtTypesofhouse" />

    <TextView
        android:id="@+id/tvNameofprovider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/tv_nameofprovider"
        app:layout_constraintBottom_toTopOf="@+id/txtNameofprovider"
        app:layout_constraintStart_toStartOf="@+id/txtNameofprovider" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_inserthere"
        app:layout_constraintEnd_toEndOf="@+id/txtNameofprovider"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtNameofprovider"
        app:layout_constraintTop_toBottomOf="@+id/txtNameofprovider" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tv_address"
        app:layout_constraintBottom_toTopOf="@+id/txtAddress"
        app:layout_constraintStart_toStartOf="@+id/txtAddress" />

    <TextView
        android:id="@+id/tvTypesofhouse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/tv_typesofhouse"
        app:layout_constraintBottom_toTopOf="@+id/txtTypesofhouse"
        app:layout_constraintStart_toStartOf="@+id/txtTypesofhouse" />

    <TextView
        android:id="@+id/tvBedroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tv_bedroom"
        app:layout_constraintBottom_toTopOf="@+id/txtBedroom"
        app:layout_constraintStart_toStartOf="@+id/txtBedroom" />

    <EditText
        android:id="@+id/txtNameofprovider"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_inserthere"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="516dp"
        android:text="@string/btn_add"
        app:layout_constraintEnd_toEndOf="@+id/txtNameofprovider"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtNameofprovider"
        app:layout_constraintTop_toBottomOf="@+id/txtNameofprovider" />

    <EditText
        android:id="@+id/txtFurniture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/txt_inserthere"
        app:layout_constraintEnd_toEndOf="@+id/txtBedroom"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtBedroom"
        app:layout_constraintTop_toBottomOf="@+id/txtBedroom" />

    <EditText
        android:id="@+id/txtPrice"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/txtFurniture"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtFurniture"
        app:layout_constraintTop_toBottomOf="@+id/txtFurniture" />

    <EditText
        android:id="@+id/txtYourname"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/txt_inserthere"
        app:layout_constraintEnd_toEndOf="@+id/txtPrice"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtPrice"
        app:layout_constraintTop_toBottomOf="@+id/txtPrice"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvFurniture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tv_furniture"
        app:layout_constraintBottom_toTopOf="@+id/txtFurniture"
        app:layout_constraintStart_toStartOf="@+id/txtFurniture" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/tv_price"
        app:layout_constraintBottom_toTopOf="@+id/txtPrice"
        app:layout_constraintStart_toStartOf="@+id/txtPrice" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:text="@string/tv_addapartmentpost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="14dp" />

    <TextView
        android:id="@+id/tvYourname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tv_yourname"
        app:layout_constraintBottom_toTopOf="@+id/txtYourname"
        app:layout_constraintStart_toStartOf="@+id/txtYourname" />

</androidx.constraintlayout.widget.ConstraintLayout>